did the triangle and composite